--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
       }
     ]
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/AvDevx/Tasky.git"
+},
   "scripts": {
     "lint": "eslint .",
     "pretest": "npm run lint",
